--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
+# Dependencies
 node_modules
+
+# Build outputs
+dist
+*.tsbuildinfo
+
+# Test coverage
+coverage
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
