feat: implement complete LMS system with authentication and books management
- Add JWT authentication with Passport for students and staff
- Implement books CRUD endpoints with validation
- Set up Drizzle ORM with PostgreSQL database
- Add database schemas for students, staff, and books
- Configure Swagger API documentation
- Set up Husky git hooks with pre-commit and pre-push
- Add commitlint for conventional commits
- Configure ESLint and Prettier for code quality
- Add Docker Compose for PostgreSQL
- Create comprehensive project overview documentation
- Set up Vitest testing framework with SWC

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ node_modules
 dist
 *.tsbuildinfo
 
+# Drizzle migrations
+drizzle
+
 # Test coverage
 coverage
 
@@ -12,6 +15,7 @@ coverage
 .env
 .env.local
 .env.*.local
+docker-compose.override.yml
 
 # IDE
 .vscode
